kustomize/overlays/poc/patch.yaml
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Ingress
metadata:
  name: alfresco--repository
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: 0.0.0.0/0
