kustomize/overlays/poc/repository-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alfresco-content-services-alfresco-cs-repository
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: 0.0.0.0/0
